more security fixes and visual changes

--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -16,6 +16,6 @@
       <% end %>
     </div>
   <% else %>
-    <h2 class="mt-16 mb-4 font-semibold text-xl">You have no Articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">You haven't written any articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
   <% end %>
 </div>
