--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
     <%= link_to root_path do %>
       <span class="font-semibold text-white text-xl tracking-tight bg-red-800 px-4 py-2 rounded">KB</span>
     <% end %>
+    <h1 class="mx-4 font-bold tracking-wide lg:hidden">Killer Blog</h1>
   </div>
   <div id="burgerBtn" data-action="click->mobileNav#toggleNavbar" class="block lg:hidden">
     <button
@@ -16,8 +17,8 @@
   <div id="mobileNavLinks" class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto">
     <div class="text-sm lg:flex-grow">
       <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
-      <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
       <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
+      <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
     </div>
     <% if Current.user %>
       <p class="font-semibold">
@@ -27,8 +28,8 @@
       </p>
     <% else %>
       <div>
-        <%= link_to "Register", register_path, class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0" %>
         <%= link_to "Log in", login_path, class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0" %>
+        <%= link_to "Register", register_path, class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0" %>
       </div>
     <% end %>
   </div>
